LWC_WorkReport/force-app/main/default/objects/i3s_Log__c/i3s_Log__c.object-meta.xml
<CustomObject>
    <label>ログ情報</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>i3s_Log_name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>