LWC_WorkReport/force-app/main/default/objects/i3s_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>アクション名（主に画面側で設定する）</description>
    <label>アクション</label>
    <length>255</length>
    <type>Text</type>
</CustomField>