LWC_WorkReport/force-app/main/default/objects/i3s_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>ログ詳細（エラー等）を設定する。</description>
    <label>詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>