LWC_WorkReport/force-app/main/default/objects/i3s_Log__c/fields/OperationDatetime__c.field-meta.xml
<CustomField>
    <fullName>OperationDatetime__c</fullName>
    <label>操作時間</label>
    <type>DateTime</type>
</CustomField>